// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/empty.proto";

option go_package = "github.com/ecshreve/dndgen/ent/proto/entpb";

message AbilityBonus {
  int64 id = 1;

  int64 value = 2;

  repeated AbilityScore ability_score = 3;
}

message AbilityScore {
  int64 id = 1;

  string indx = 2;

  string name = 3;

  string full_name = 4;

  repeated string desc = 5;

  repeated Skill skills = 6;

  repeated AbilityBonus ability_bonus = 7;
}

message CreateAbilityScoreRequest {
  AbilityScore ability_score = 1;
}

message GetAbilityScoreRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateAbilityScoreRequest {
  AbilityScore ability_score = 1;
}

message DeleteAbilityScoreRequest {
  int64 id = 1;
}

message ListAbilityScoreRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListAbilityScoreResponse {
  repeated AbilityScore ability_score_list = 1;

  string next_page_token = 2;
}

message BatchCreateAbilityScoresRequest {
  repeated CreateAbilityScoreRequest requests = 1;
}

message BatchCreateAbilityScoresResponse {
  repeated AbilityScore ability_scores = 1;
}

message Skill {
  int64 id = 1;

  string indx = 2;

  string name = 3;

  repeated string desc = 4;

  AbilityScore ability_score = 5;
}

message CreateSkillRequest {
  Skill skill = 1;
}

message GetSkillRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateSkillRequest {
  Skill skill = 1;
}

message DeleteSkillRequest {
  int64 id = 1;
}

message ListSkillRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListSkillResponse {
  repeated Skill skill_list = 1;

  string next_page_token = 2;
}

message BatchCreateSkillsRequest {
  repeated CreateSkillRequest requests = 1;
}

message BatchCreateSkillsResponse {
  repeated Skill skills = 1;
}

service AbilityScoreService {
  rpc Create ( CreateAbilityScoreRequest ) returns ( AbilityScore );

  rpc Get ( GetAbilityScoreRequest ) returns ( AbilityScore );

  rpc Update ( UpdateAbilityScoreRequest ) returns ( AbilityScore );

  rpc Delete ( DeleteAbilityScoreRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListAbilityScoreRequest ) returns ( ListAbilityScoreResponse );

  rpc BatchCreate ( BatchCreateAbilityScoresRequest ) returns ( BatchCreateAbilityScoresResponse );
}

service SkillService {
  rpc Create ( CreateSkillRequest ) returns ( Skill );

  rpc Get ( GetSkillRequest ) returns ( Skill );

  rpc Update ( UpdateSkillRequest ) returns ( Skill );

  rpc Delete ( DeleteSkillRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListSkillRequest ) returns ( ListSkillResponse );

  rpc BatchCreate ( BatchCreateSkillsRequest ) returns ( BatchCreateSkillsResponse );
}
